fonctionnalité de filtre après avoir tapé 3 lettres dans la barre de recherche

--- a/src/app/pokemon/barrederecherche/barrederecherche.component.html
+++ b/src/app/pokemon/barrederecherche/barrederecherche.component.html
@@ -18,7 +18,8 @@
         type="text"
         placeholder="Rechercher un pokemon"
         aria-label="Rechercher"
-        (input)="search(searchBox?.value ?? '')"
+        (input)="search(searchBox?.value ?? '');"
+        oninput="searchBox_OnInput(this)"
       />
       <ul>
         <li
