--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -1,7 +1,7 @@
 <app-barrederecherche> </app-barrederecherche>
 
 <div class="container">
-  <div class="row">
+  <div class="row row-cols-3">
     <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
       <div
         (click)="goToPokemon(pokemon)"
