--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,23 @@
 .tableau {
   margin-top: 60px;
 }
+/*
+.row-cols-3 > * {
+  flex: 0 0 auto;
+  width: 33.333%;
+}
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+}
+
+.col {
+  flex: 1 0 0%;
+}*/
